<?xml version="1.0"?>
<package format="2">
  <name>arti_gazebo_laser_livox</name>
  <version>1.0.0</version>
  <description>
    A Gazebo-ROS-plugin for simulatin a Livox-laserscanner.
  </description>

  <maintainer email="m.stradner@arti-robots.com">Michael Stradner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>

</package>
