<?xml version="1.0"?>
<package format="2">
  <name>arti_gazebo_sick_mrs1000</name>
  <version>1.0.0</version>
  <description>
    A URDF and Gazebo model to simulate the Sick MRS1000.
  </description>

  <maintainer email="m.stradner@arti-robots.com">Michael Stradner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>velodyne_gazebo_plugins</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>velodyne_gazebo_plugins</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>  
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
